--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
             gem install rake            
           run: |
             cd build
-            cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_STATIC=On -DBUILD_WITH_LUA=On -DBUILD_WITH_MOON=On -DBUILD_WITH_FENNEL=On -DBUILD_WITH_WREN=On -DBUILD_WITH_RUBY=On -DBUILD_WITH_WASM=On -DBUILD_WITH_SCHEME=On -DBUILD_WITH_SQUIRREL=On -DBUILD_WITH_PYTHON=On -DBUILD_WITH_JS=On -DBUILD_WITH_JANET=On ..
+            cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_STATIC=On -DBUILD_WITH_LUA=On -DBUILD_WITH_MOON=On -DBUILD_WITH_FENNEL=On -DBUILD_WITH_WREN=On -DBUILD_WITH_RUBY=On -DBUILD_WITH_WASM=On -DBUILD_WITH_SCHEME=On -DBUILD_WITH_SQUIRREL=On -DBUILD_WITH_PYTHON=On -DBUILD_WITH_JS=Off -DBUILD_WITH_JANET=Off ..
             cmake --build . --parallel 2
             
       - name: Deploy
